清理警告代码